cart item add & remove to ui & localStorage

--- a/complete-react-appb-react-and-localStorage/package.json
+++ b/complete-react-appb-react-and-localStorage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memorable-water-bottle",
+  "name": "comlete-react-app-by-react-andd-localsstorage1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
